tests/integration/errors/004_invalid_key.nesl
<<<<<<<<<nesl
{
  good_key = R"""pv(valid)pv"""
  bad key = R"""pv(space in key)pv"""
  another = R"""pv(ok)pv"""
}
=========nesl